# pico-sdk-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  configure.sh
include/: CMakeLists.txt
src/: CMakeLists.txt  main.c
